GNU parted NEWS                                    -*- outline -*-

* Noteworthy changes in release ?.? (????-??-??) [?]

** Bug Fixes

  libparted: gpt: fix gpt_get_max_supported_partition_count to work
  also on little-endian systems.

  libparted: treat a disk with no pMBR as an msdos-labeled disk
  even when it has valid GPT headers.


* Noteworthy changes in release 3.1 (2012-03-02) [stable]

** New features

  parted now supports up to 64 msdos partitions (was 16).  The partition
  table format imposes no limit (it's simply a linked list), so we may
  raise it further, if needed.

  parted has improved support for partitionable loopback devices

  parted provides a new library, libparted-fs-resize, for resizing
  HFS+ and FAT file systems.  This is the subset of the FS-manipulation
  functionality removed in parted-3.0 for which we have found no free
  alternative.  That library provides only these entry points:
    ped_file_system_close
    ped_file_system_get_resize_constraint
    ped_file_system_open
    ped_file_system_resize
  so when using it you must also link with libparted.

** Bug fixes

  libparted: avoid an invalid free when creating many partitions in
  a GPT partition table.  [bug introduced in parted-1.9.0]

  The msdos partition table claimed a maximum partition count of 16
  but would allow you to go beyond that.  This resulted in the kernel
  not being informed of those partitions.  Corrected to enforce the
  limit.

  parted now exits nonzero for certain failures already diagnosed as "Error".
  For example, before this change, parted would exit successfully in spite
  of "Error: ...unrecognised disk label" and "Error:... both GPT primary
  and backup partition tables are corrupted".

  libparted: given a GPT table with a partition table array of length, say 9,
  (usually, there are at least 128 entries) and when run in interactive mode
  with the backup header not at the end of the device where it belongs, parted